Separate backend prompting for each mode for more presise AI modes. Markdown formatting fix. index.js mode fixes, fixed /lyrics.

--- a/public/index.html
+++ b/public/index.html
@@ -43,30 +43,18 @@
           </div>
         </div>
 
-        <!-- <label>Dialect:</label>
-        <select id="dialect-select">
-          <option value="Default">Default</option>
-          <option value="Appalachian">Appalachian</option>
-          <option value="Southern">Southern</option>
-          <option value="West Coast">West Coast</option>
-          <option value="Midwest">Midwest</option>
-          <option value="Cowboy">Cowboy / Western</option>
-          <option value="Nashville">Nashville Songwriter</option>
-          <option value="New England">New England Folk</option>
-        </select> -->
-
         <!-- Genre Multi-Select -->
         <div id="genre-multiselect" class="multiselect">
           <div id="genre-display" class="display-row">Select Genre ▾</div>
           <div id="genre-dropdown" class="dropdown hidden">
             <div class="item">Pop</div>
             <div class="item">Country</div>
-            <div class="item">Retro</div>
-            <div class="item">Classic Rock</div>
-            <div class="item">Indie Rock</div>
-            <div class="item">Bluegrass</div>
-            <div class="item">Folk</div>
+            <div class="item">Blues</div>
             <div class="item">Soul</div>
+            <div class="item">Hip-Hop</div>
+            <div class="item">Indie Rock</div>
+            <div class="item">Folk</div>
+            <div class="item">Bluegrass</div>
           </div>
         </div>
 
@@ -104,9 +92,10 @@
     </div>
 
     <!-- UI Scripts -->
-    <script src="helpChat.js"></script>
-    <script src="lyricAssistant.js"></script>
-    <script src="thesaurus.js"></script>
+    <script src="tools/markdown.js"></script>
+    <script src="modes/helpChat.js"></script>
+    <script src="modes/lyricAssistant.js"></script>
+    <script src="modes/thesaurus.js"></script>
     
   </body>
 </html>
